url: ${MAESTRO_APP_URL}
name: Accounts List
tags:
  - authenticated
---
- launchApp
- tapOn: "계좌"
- assertVisible: "SA 계좌"
- assertVisible:
    id: "sa-list-item-1"
- assertVisible:
    id: "sa-list-item-2"
- tapOn:
    id: "sa-list-item-1"
- assertVisible: "SA 상세"
